--- a/credit.ipynb
+++ b/credit.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Explore Dataset"
+    "### Explore Dataset (Dataset Link - https://www.kaggle.com/datasets/venkatasubramanian/credit-eda-case-study?select=application_data.csv)"
    ]
   },
   {
